# Cplusplus

CowString/: COWstring.cpp  COWstring.hpp  main.cpp
PIMPL/: main.cpp  pimpl.cpp  pimpl.hpp
RAII/: main.cpp  mystring.cpp  mystring.hpp
acllocator自定义Vector/: 3_diy_vector_allocator.cpp
log4cpp可变参数/: Log4cpp封装.md  Mylogger.cpp  Mylogger.hpp  TestMylogger.cpp  logger.cpp  logger.hpp  main.cpp
maxOfUnsignedInt/: 14_maxValueOfUnsignedInt.cpp
pthread_cond_wait/: 3_pthread_cond_wait.cpp
tuple及非类型模板参数的奇怪用法/: 4_non_type_template_parameter.cpp  5_tuple.cpp
只能生成栈对象的类/: main.cpp
在类模板中定义友元函数的几种形式/: 10_templateClass_templateFriend.cpp  11_noLimitedTemplateFriendFunc.cpp  9_templateClass_NonTemplateFriend.cpp  在类模板中定义友元的几种形式.md
基于std_thread的生产者消费者/: CMakeLists.txt
搜索引擎/: CandidateResult.cc  Dictionary.cc  EventLoop.h  TestTcpServer.cc  Thread.cc  Thread.h  ThreadPool.cc  dict.txt  dict_zh.txt  index.txt  index_zh.txt
搜索引擎v2/: CMakeLists.txt  CandidateResult.h  Configure.cc  Configure.hpp  Cos.cc  Cos.hpp  Dictionary.cc  Dictionary.h  EventLoop.cc  KeyRecommander.h  LoadFile.cc  LoadFile.hpp  TF_IDF.cc  TF_IDF.hpp  TcpConnection.h  TcpServer.h  TestTcpServer.cc  configure.conf  doSearch.cc  doSearch.hpp  test.cc  webPage.cc  webPage.hpp  webQuery.cc  webQuery.hpp  wordSegmentation.hpp
搜索引擎v3/: CMakeLists.txt  CacheManager.cc  CacheManager.h  EventLoop.cc  EventLoop.h  KeyRecommander.cc  LRUcache.cc  LRUcache.h  SocketIO.cc  SocketIO.h  TcpConnection.cc  TcpServer.cc  TestTcpServer.cc  Thread.cc  Thread.h  ThreadPool.cc  ThreadPool.h
模板堆排序/: main.cpp
(+12 files in other folders)
