cmake_minimum_required(VERSION 3.0)
project(REACTOR)
include_directories(${CMAKE_SOURCE_DIR})
file(GLOB SRC ${PROJECT_SOURCE_DIR}/*.cc)
add_executable(a.out ${SRC})
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g")
target_link_libraries(a.out pthread)
